为pom.xml添加相关信息

--- a/ureport2-console/pom.xml
+++ b/ureport2-console/pom.xml
@@ -59,4 +59,6 @@
 		<name>Bstek</name>
 		<url>http://www.bstek.com</url>
 	</organization>	
+	<name>UReport2 Console Project</name>
+	<url>https://github.com/jacky6024/ureport2/tree/master/ureport2-console</url>
 </project>
