--- a/ureport2-parent/pom.xml
+++ b/ureport2-parent/pom.xml
@@ -8,6 +8,29 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Gaojie</name>
+			<email>jacky.gao@bstek.com</email>
+			<organization>Bstek</organization>
+			<organizationUrl>http://www.bstek.com</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>git@github.com:jacky6024/ureport2.git</connection>
+		<developerConnection>git@github.com:jacky6024/ureport2.git</developerConnection>
+		<url>https://github.com/jacky6024/ureport2</url>
+	</scm>
+	<organization>
+		<name>Bstek</name>
+		<url>http://www.bstek.com</url>
+	</organization>
 	<build>
 		<resources>
 			<resource>
@@ -101,4 +124,6 @@
 			<url>http://nexus.bsdn.org/content/repositories/dorado_snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
+	<name>UReport2 Parent Project</name>
+	<url>https://github.com/jacky6024/ureport2/tree/master/ureport2-parent</url>
 </project>
