--- a/ureport2-font/pom.xml
+++ b/ureport2-font/pom.xml
@@ -14,4 +14,29 @@
   		<version>2.0.0-SNAPSHOT</version>
   	</dependency>
   </dependencies>
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Gaojie</name>
+			<email>jacky.gao@bstek.com</email>
+			<organization>Bstek</organization>
+			<organizationUrl>http://www.bstek.com</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>git@github.com:jacky6024/ureport2.git</connection>
+		<developerConnection>git@github.com:jacky6024/ureport2.git</developerConnection>
+		<url>https://github.com/jacky6024/ureport2</url>
+	</scm>
+	<organization>
+		<name>Bstek</name>
+		<url>http://www.bstek.com</url>
+	</organization>
+	<name>UReport2 Font Project</name>
+	<url>https://github.com/jacky6024/ureport2/tree/master/ureport2-font</url>
 </project>
