--- a/ureport2-font/pom.xml
+++ b/ureport2-font/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ureport2-font</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
   <parent>
   	<groupId>com.bstek.ureport</groupId>
   	<artifactId>ureport2-parent</artifactId>
@@ -11,7 +10,7 @@
   	<dependency>
   		<groupId>com.bstek.ureport</groupId>
   		<artifactId>ureport2-core</artifactId>
-  		<version>2.0.0-SNAPSHOT</version>
+  		<version>2.0.0</version>
   	</dependency>
   </dependencies>
 	<licenses>
@@ -39,4 +38,5 @@
 	</organization>
 	<name>UReport2 Font Project</name>
 	<url>https://github.com/jacky6024/ureport2/tree/master/ureport2-font</url>
+	<version>2.0.0</version>
 </project>
